--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  box-sizing: border-box;
+  margin: 0 auto;
+  height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
+.ContainerChat {
+  border: 1px solid black;
+  width: 300px;
+  height: 300px;
+  padding: 10px;
+  align-self: center;
+  overflow-y: scroll;
+  box-sizing: border-box;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.ContainerNewMessageSend {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin: 10px;
+  width: 300px;
+  box-sizing: border-box;
+
+  textarea {
+    width: 70%;
   }
-  to {
-    transform: rotate(360deg);
+
+  button {
+    width: 30%;
+    height: 100%;
   }
 }
