--- a/src/App.css
+++ b/src/App.css
@@ -5,17 +5,50 @@
   align-items: center;
   box-sizing: border-box;
   margin: 0 auto;
-  height: 100vh;
+}
+
+.AppBar {
+  width: 100%;
+  height: 5vh;
+  padding: 10px;
+  font-size: 20px;
+
+  display: flex;
+  align-self: flex-start;
+  align-items: center;
+
+  background-color: dodgerblue;
+  color: aliceblue;
+}
+
+.ContainerWindow {
+  width: 100%;
+  height: 90vh;
+
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  justify-content: center;
 }
 
 .ContainerChat {
   border: 1px solid black;
-  width: 300px;
+  width: 500px;
   height: 300px;
   padding: 10px;
   align-self: center;
   overflow-y: scroll;
   box-sizing: border-box;
+  margin: 0;
+}
+
+.ContainerForButtons {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  justify-content: center;
+  margin: 4px;
+  padding: 0;
 }
 
 .ContainerNewMessageSend {
@@ -23,16 +56,37 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: flex-start;
-  margin: 10px;
-  width: 300px;
+  margin: 4px;
+  width: 500px;
   box-sizing: border-box;
 
   textarea {
     width: 70%;
+    margin: 4px;
+    min-height: 30px;
+    box-sizing: border-box;
+  }
+
+  input {
+    width: 70%;
+    margin: 4px;
+    min-height: 30px;
+    box-sizing: border-box;
   }
 
   button {
     width: 30%;
-    height: 100%;
+    min-height: 30px;
+    margin: 4px;
+
+    align-self: center;
+    box-sizing: border-box;
+
+    background-color: dodgerblue;
+    color: aliceblue;
+
+    border: none;
+    cursor: pointer;
+    font-size: 14px;
   }
 }
